# yt-vinyl-pipeline

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/yt_vinyl/: config.py  pipeline.py  utils.py
src/yt_vinyl/ingestion/: youtube.py
src/yt_vinyl/storage/: storage.py
src/yt_vinyl/transform/: transform.py
tests/: test_storage.py  test_transform.py  test_utils.py  test_youtube.py
