[project]
name = "yt-vinyl-pipeline"
version = "0.1.0"
description = "CLI vinyl pipeline idea"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-testdox>=3.1.0",
    "ruff>=0.15.4",
]
