[project]
name = "yt-vinyl-pipeline"
version = "0.1.0"
description = "CLI vinyl pipeline idea"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.190.0",
    "loguru>=0.7.3",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-testdox>=3.1.0",
    "ruff>=0.15.4",
]
